--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,12 @@ environment:
   sdk: '>=2.19.5 <3.0.0'
 
 dependencies:
+  animate_do: ^3.0.2
   flutter:
     sdk: flutter
+  intl: ^0.18.1
   provider: ^6.0.5
+  video_player: ^2.6.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -18,6 +21,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-assets:
-  - assets/videos/
